# alignn

./: .gitignore  ANALYSIS.md  COORDINATION_AWARE_ALIGNN_PLAN.md  DAY6_DAY7_PROGRESS.md  GRAPH_GAP_ANALYSIS.md  MULTITASK_ALIGNN_PLAN.md  README.md  alignn_blueprint.md  alignn_blueprint.tex  jmi_mba_current_affairs.tex  pyproject.toml
.helix/: ignore
notebooks/: 01_data_check.ipynb
report/: alignn_improvement_results.tex  bandgap_ehull_improvement_results.tex  final_realignn_results.tex  mbj_bandgap_bulk_modulus_improvement_results.tex  multitask_alignn_progress_report.tex  split_plan.md
scripts/: analyze_bm_predictions.py  analyze_multitask_results.py  analyze_phase6_transfer_regimes.py  compare_against_original_e30.py  generate_learnlore_ppt.js  generate_sound_separation_ppt.js  run_aggressive_configs.sh  run_best5_after_mbj.sh  run_best5_targets.sh  run_bm_group_decay.sh  run_bm_h256.sh  run_bm_importance_sampling.sh  run_bm_l1_v2.sh  run_bm_tail_after_best5.sh  run_bm_tail_aware.sh  run_bulk_modulus_improved.sh  run_bulk_modulus_improved_fast.sh  run_fair_e60_resume_pipeline.sh  run_fe_smoothl1.sh  run_fe_smoothl1_after_l1.sh  run_formation_energy_tail_weighted.sh  run_formation_energy_tail_weighted_fast.sh  run_l1_matched.sh  run_mbj_fix.sh  run_mbj_zero_inflated.sh  run_mitigated_sweep.sh  run_multitask_extended_sweep.sh  run_multitask_final_cont.sh  run_multitask_final_sweep.sh  run_multitask_fix_sweep.sh  run_multitask_fix_sweep_cont.sh  run_multitask_fix_sweep_cont2.sh  run_multitask_improved_sweep.sh  run_multitask_improved_sweep_cont.sh  (+15 more)
(+40 files in other folders)
